Update getStudentsByActivity method